<resources>
    <string name="app_name">NasaAssignment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="date_of_capture">Date of capture:</string>
    <string name="_09_09_2021">09/09/2021</string>
    <string name="camera_name">Camera Name:</string>
    <string name="rover_name">Rover Name:</string>
    <string name="curiosity">Curiosity</string>
    <string name="rover_status">Rover Status:</string>
    <string name="active">Active</string>
    <string name="rover_launch_date">Rover Launch Date:</string>
    <string name="rover_landing_date">Rover Landing Date:</string>
    <string name="_25_04_1996">25/04/1996</string>
    <string name="camera_fhaz">FHAZ</string>
    <string name="camera_rhaz">RHAZ</string>
    <string name="camera_mast">MAST</string>
    <string name="camera_chemcam">CHEMCAM</string>
    <string name="camera_mahli">MAHLI</string>
    <string name="camera_mardi">MARDI</string>
    <string name="camera_navcam">NAVCAM</string>
    <string name="camera_pancam">PANCAM</string>
    <string name="camera_minites">MINITES</string>
    <string name="filter">filter</string>
    <string name="touch_to_photo">touch to photo</string>
    <string name="for_photo_deta_ls">for photo detaıls</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_aliquam_arcu_sit_amet_finibus_finibus_libero_est_malesuada_sapien_sed_efficitur_erat_dui_eu_lacus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla aliquam, arcu sit amet finibus, libero est malesuada sapien, sed efficitur erat dui eu lacus.</string>
    <string name="next">Next</string>
    <string name="by_camera">by camera</string>
    <string name="f_lter_photos">fılter photos</string>
    <string name="your_favour_te_rover">your favourıte rover</string>
    <string name="l_st_photos">lıst photos</string>

    <string-array name="curiosity_cameras">
        <item>@string/camera_fhaz</item>
        <item>@string/camera_rhaz</item>
        <item>@string/camera_mast</item>
        <item>@string/camera_chemcam</item>
        <item>@string/camera_mahli</item>
        <item>@string/camera_mardi</item>
        <item>@string/camera_navcam</item>
    </string-array>

    <string-array name="opportunity_cameras">
        <item>@string/camera_fhaz</item>
        <item>@string/camera_rhaz</item>
        <item>@string/camera_navcam</item>
        <item>@string/camera_pancam</item>
        <item>@string/camera_minites</item>
    </string-array>

    <string-array name="spirit_cameras">
        <item>@string/camera_fhaz</item>
        <item>@string/camera_rhaz</item>
        <item>@string/camera_navcam</item>
        <item>@string/camera_pancam</item>
        <item>@string/camera_minites</item>
    </string-array>

</resources>