<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.FirstOnBoardingFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/spiritrover" />

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touch_to_photo"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="@color/nasablue"
        android:fontFamily="@font/josefinsans_medium"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_photo_deta_ls"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="@color/nasablue"
        android:fontFamily="@font/josefinsans_medium"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:padding="12dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_aliquam_arcu_sit_amet_finibus_finibus_libero_est_malesuada_sapien_sed_efficitur_erat_dui_eu_lacus"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textColor="@color/nasablue"
        android:fontFamily="@font/josefinsans_medium"
        android:textStyle="bold"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboarding_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="280dp"
        android:fontFamily="@font/josefinsans_medium"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>